@@ -1,16 +1,12 @@
 Matrix Schreier-Sims Release Notes
 ==================================
-Release date : 2004-07-03
+Release date : 2004-07-07
 
-Implemented a simple (and yet slow) version of the random
-Schreier-Sims algorithm, as first described by Leon. The algorithm
-does not use any verification but takes as input a probability and
-tries to achieve at least this probability of correctness. However,
-since the group elements are probably not taken from a uniform
-distribution (it uses GAP:s PseudoRandom function) there is not
-theoretical guarantee of any probability.
+Made an implementation of random element generation using the Rattle algorithm
+by Leedham-Green, to avoid using GAP:s built-in algorithm (which is Shake). 
+This way some inverse matrix calculations are avoided.
 
-The stopping conditions used are simple: when a number of consecutive
-random elements sifts to identity the algorithm terminates, and the
-number is calculated from the given probability. If lower and/or upper
-bounds on the group order are known, they are used in the algorithm.
+Also included is a not yet finished implementation of 
+Schreier-Todd-Coxeter-Sims algorithm, which uses coset enumeration to possibly 
+decrease the number of Schreier generators that are considered at each level 
+of the standard Schreier-Sims algorithm.
