@@ -25,5 +25,6 @@ DeclarePackage("matrixss", "1.0", ReturnTrue);
 # Read package declarations
 ReadPkg("matrixss", "lib/code.gd");
 ReadPkg("matrixss", "lib/standard.gd");
+ReadPkg("matrixss", "lib/stcs.gd");
 ReadPkg("matrixss", "lib/random.gd");
 ReadPkg("matrixss", "lib/test.gd");
