@@ -3,6 +3,16 @@ Matrix Schreier-Sims NEWS
 Important new features are listed here. 
 More detailed changed are in the ChangeLog.
 
+2004-07-07
+    Made an implementation of random element generation using the Rattle 
+    algorithm by Leedham-Green, to avoid using GAP:s built-in algorithm 
+    (which is Shake). This way some inverse matrix calculations are avoided.
+
+    Also included is a not yet finished implementation of 
+    Schreier-Todd-Coxeter-Sims algorithm, which uses coset enumeration to 
+    possibly decrease the number of Schreier generators that are considered at 
+    each level of the standard Schreier-Sims algorithm.
+
 2004-07-03
     Implemented a simple (and yet slow) version of the random
     Schreier-Sims algorithm, as first described by Leon. The algorithm
